# video-data-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
v-data-catalog/: .coveragerc  .env.template  app_lifespan.py  main.py  manage.py  stuff.py
v-data-catalog/api/: main_views.py
v-data-catalog/api/api_v1/: __init__.py
v-data-catalog/api/api_v1/auth/services/: redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
v-data-catalog/api/api_v1/video_catalog/: crud.py  dependencies.py  redis.py  views.py
v-data-catalog/api/api_v1/video_catalog/views/: details_views.py  list_views.py
v-data-catalog/commands/: hello.py  tokens.py
v-data-catalog/core/: config.py
v-data-catalog/schemas/: video_catalog.py
v-data-catalog/testing/: conftest.py
v-data-catalog/testing/test_api/: conftest.py  test_views.py
v-data-catalog/testing/test_api/test_api_v1/test_auth/services/: test_redis_tokens_helper.py
v-data-catalog/testing/test_api/test_api_v1/test_video_catalog/: test_crud.py  test_dependecies.py
v-data-catalog/testing/test_api/test_api_v1/test_video_catalog/test_views/test_details_views/: test_delete.py  test_transfer.py  test_update.py  test_update_partial.py
v-data-catalog/testing/test_api/test_api_v1/test_video_catalog/test_views/test_list_views/: test_create.py
v-data-catalog/testing/test_schemas/: test_user.py  test_video_catalog.py
