[project]
name = "video-data-catalog"
version = "0.1.0"
description = "Video data catalog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "redis[hiredis]>=6.2.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']


# ruff settings

[tool.ruff]
required-version = ">=0.11.5"
src = [
    "url-shortener",
]




# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations (ANN)
    "FAST", # FastAPI (FAST)
    "I", # isort (I)
    "F", # Pyflakes (F)
    "COM", # flake8-commas (COM)
    "Q", # flake8-quotes (Q)
    # "ASYNC", # flake8-async (ASYNC)
    "S", # flake8-bandit (S)
    "BLE", # flake8-blind-except (BLE)
    "FBT",  # flake8-boolean-trap (FBT)
    "B",  # flake8-bugbear (B)
    "C4", # flake8-comprehensions (C4),
    "DTZ", # flake8-datetimez (DTZ)
    "T10", # flake8-debugger (T10)
    "EM", # flake8-errmsg (EM)
    "ISC", # flake8-implicit-str-concat (ISC)
]

ignore = [
    "S101", # S101	assert	Use of assert detected
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "TC006", # runtime-cast-value
]

[tool.ruff.lint.extend-per-file-ignores]
"stuff.py" = [
    "T20", # flake8-print (T20)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
